2001-02-13  Michael Engber  <engber@eazel.com>

	reviewed by: Darin Adler  <darin@eazel.com>

	* libnautilus-extensions/nautilus-directory-metafile.c:
	(nautilus_directory_use_self_contained_metatfile_factory),
	(get_metafile), (nautilus_directory_set_file_metadata_list):
	* libnautilus-extensions/nautilus-directory-metafile.h:
	* libnautilus-extensions/nautilus-metafile.c: (destroy),
	(corba_get_list):
	* src/nautilus-main.c: (main):
	The metafile code now circumvents oaf when nautilus is performing
	a self check - bug 6552.

2001-02-13  Robin * Slomkowski  <rslomkow@rslomkow.org>

	* nautilus.spec.in: re-enabled building...

2001-02-13  John Sullivan  <sullivan@eazel.com>

	Fixed bug 5647 (Control-left/right for keyboard focus
	movement conflicts with Sawfish keyboard shortcuts)

	* libnautilus-extensions/nautilus-icon-container.c:
	(keyboard_move_to), (keyboard_space): Use Alt instead
	of Control for keyboard focus movement and selection
	toggling, per Don.

2001-02-13  Robin * Slomkowski  <rslomkow@rslomkow.org>

	* nautilus.spec.in: took make check out of here
	* src/Makefile.am: re-enabled test target

2001-02-13  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: Maciej Stachowiak  <mjs@eazel.com>

	* libnautilus-extensions/Makefile.am:
	* libnautilus-extensions/nautilus-glyph.h:
	* libnautilus-extensions/nautilus-glyph.c:
	New class.  A wrapper on RsvgGlyph that makes it simple and fast
	to draw smooth text on pixbufs
	
	* libnautilus-extensions/nautilus-clickable-image.c:
	(nautilus_clickable_image_initialize_class),
	(nautilus_clickable_image_realize):
	Remove unrealize() method that was a noop.
	
	* libnautilus-extensions/nautilus-debug-drawing.c:
	(nautilus_debug_pixbuf_draw_point),
	(nautilus_debug_pixbuf_draw_rectangle),
	(nautilus_debug_pixbuf_draw_rectangle_inset):
	* libnautilus-extensions/nautilus-debug-drawing.h:
	Add some pixbuf drawing functions to debug clip areas in pixbufs.

	* libnautilus-extensions/nautilus-image-table.c: