@@ -125,10 +125,7 @@ CFLAGS="$RPM_OPT_FLAGS" ./configure $MYARCH_FLAGS --prefix=%{prefix} \
 	--enable-more-warnings \
 	--sysconfdir=%{sysconfdir}
 
-## removed because of build breakage
-## make -k check
-
-make -k
+make -k check
 
 %install
 [ -n "$RPM_BUILD_ROOT" -a "$RPM_BUILD_ROOT" != / ] && rm -rf $RPM_BUILD_ROOT
