@@ -1,3 +1,7 @@
+2001-02-13  Robin * Slomkowski  <rslomkow@rslomkow.org>
+
+	* nautilus.spec.in: enabled make -k check
+
 2001-02-13  Michael Engber  <engber@eazel.com>
 
 	reviewed by: Darin Adler  <darin@eazel.com>
